Create rake test task, to quickly check with rubocop and spec/models

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -65,6 +65,8 @@ Style/RedundantFetchBlock:
   Enabled: true
 Style/RedundantFileExtensionInRequire:
   Enabled: true
+Style/StringLiterals:
+  Enabled: false
 
 Metrics/BlockLength:
   Exclude:
