--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "directories": {
     "lib": "lib"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^8.16.0",
+    "eslint-plugin-react": "^7.30.0"
+  }
 }
