--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
   "devDependencies": {
     "eslint": "^8.16.0",
     "eslint-plugin-react": "^7.30.0",
-    "http-server": "^14.1.0"
+    "http-server": "^14.1.0",
+    "jest": "^28.1.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
+
+
