--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "eslint": "^8.16.0",
     "eslint-plugin-react": "^7.30.0",
     "http-server": "^14.1.0",
+    "jasmine-core": "^4.1.1",
     "jest": "^28.1.0",
-    "karma": "^6.3.20"
+    "karma": "^6.3.20",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-firefox-launcher": "^2.1.2",
+    "karma-jasmine": "^5.0.1",
+    "karma-safari-launcher": "^1.0.0"
   }
 }
