--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^8.16.0",
     "eslint-plugin-react": "^7.30.0",
     "http-server": "^14.1.0",
+    "jasmine": "^4.1.0",
     "jasmine-core": "^4.1.1",
     "jest": "^28.1.0",
     "karma": "^6.3.20",
