--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "author": "Andre Heijstek <andre.heijstek@hey.com>",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "test": "cross-env NODE_OPTIONS=--loader=ts-node/esm jasmine --config=jasmine.json"
   },
@@ -26,20 +27,23 @@
     "lib": "lib"
   },
   "devDependencies": {
+    "@types/jasmine": "^3.10.3",
+    "cross-env": "^7.0.3",
     "eslint": "^8.16.0",
     "eslint-plugin-react": "^7.30.0",
     "http-server": "^14.1.0",
-    "@types/jasmine": "^3.10.3",
-    "cross-env": "^7.0.3",
     "jasmine": "^4.1.0",
     "jasmine-core": "^4.1.1",
     "jest": "^28.1.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
     "karma": "^6.3.20",
     "karma-chrome-launcher": "^3.1.1",
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^5.0.1",
-    "karma-safari-launcher": "^1.0.0"
+    "karma-safari-launcher": "^1.0.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "gcc": "^1.0.2"
   }
 }
