Configure the shell inside the container

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,6 @@
 FROM ruby:3.0.2
 RUN apt-get update \
-    && apt-get install -y yarnpkg vim \
+    && apt-get install -y yarnpkg vim lsof gcc \
     && ln -s /usr/bin/yarnpkg /usr/local/bin/yarn \
-    && rm -rf /var/lib/apt/lists/* \
-    && yarn add gcc
+    && rm -rf /var/lib/apt/lists/*
+COPY load-profile.sh /etc/profile.d/
